--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,21 @@
-# Production Environment Variables
+# Production Environment Variables for PythonAnywhere
 # Copy this file to .env and fill in the values
 
 # Database
-DATABASE_URL=postgresql://user:password@host:port/database
+# For PythonAnywhere free tier, leave empty to use SQLite
+# For MySQL (paid tier): mysql://username:password@username.mysql.pythonanywhere-services.com/username$dbname
+DATABASE_URL=
 
-# JWT Secret (CHANGE THIS!)
-JWT_SECRET_KEY=your-super-secret-key-change-this-in-production
+# JWT Secret (REQUIRED - Generate a strong random key)
+# Generate with: python3 -c "import secrets; print(secrets.token_urlsafe(32))"
+JWT_SECRET_KEY=CHANGE-THIS-TO-A-RANDOM-SECRET-KEY
 
 # Flask
 FLASK_ENV=production
 FLASK_DEBUG=False
 
-# CORS (Update with your frontend URL)
-FRONTEND_URL=https://your-frontend-domain.vercel.app
+# CORS - Your frontend URL (Update with your Vercel deployment URL)
+FRONTEND_URL=https://your-app-name.vercel.app
+
+# Port (Not used on PythonAnywhere, but keep for local testing)
+PORT=5001
