--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,18 @@
+# Core Flask dependencies
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-CORS==4.0.0
 PyJWT==2.8.0
 python-dotenv==1.0.0
-psycopg2-binary==2.9.9
+
+# Production server (optional for PythonAnywhere, but good to have)
 gunicorn==21.2.0
+
+# Database drivers
+# PostgreSQL (only needed if using PostgreSQL on paid tier)
+# Uncomment if using PostgreSQL:
+# psycopg2-binary==2.9.9
+
+# MySQL (only needed if using MySQL on paid tier)
+# Uncomment if using MySQL:
+# mysqlclient==2.2.0
